...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeMainScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
...
                        app:cardUseCompatPadding="true"
                        app:contentPaddingBottom="16dp"
                        app:contentPaddingLeft="16dp"
                        app:contentPaddingRight="16dp">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvLeague"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </android.support.v7.widget.RecyclerView>
                    </android.support.v7.widget.CardView>

...
